--- a/app/client/package.json
+++ b/app/client/package.json
@@ -42,6 +42,7 @@
     ]
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.8.0",
     "@typescript-eslint/parser": "^6.7.3",
     "eslint": "^7.16.0",
     "eslint-config-prettier": "^7.1.0",
