--- a/app/server/package.json
+++ b/app/server/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@grpc/grpc-js": "^1.9.6",
+    "@grpc/proto-loader": "^0.7.10",
     "ts-node": "^10.9.1",
     "typescript": "^5.2.2",
     "ws": "^8.14.2"
