gitignore credentials and specify in readme

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,9 @@
+#deps
 /app/client/node_modules
 /app/server/node_modules
+
+# security / credentials
+app/server/lnd/invoice.macaroon
+app/server/lnd/invoices.proto
+app/server/lnd/lightning.proto
+app/server/lnd/tls.cert
